deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ledger-api
  namespace: payments
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ledger-api.payments.local
      secretName: ledger-api-tls
  rules:
    - host: ledger-api.payments.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ledger-api
                port:
                  number: 8080
